Bug 69171 - NFSv4.0 proto=rdma mountpoints advertise "rdma" as the callback netid
Summary: NFSv4.0 proto=rdma mountpoints advertise "rdma" as the callback netid
Status: RESOLVED CODE_FIX
Alias: None
Product: File System
Classification: Unclassified
Component: NFS (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Chuck Lever
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-21 20:15 UTC by Chuck Lever
Modified: 2014-04-11 14:29 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.13
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Proposed fix for bz 69171 (2.41 KB, patch)
2014-01-22 18:17 UTC, Chuck Lever
Details | Diff

Description Chuck Lever 2014-01-21 20:15:57 UTC
NFSv4.0 clients use the SETCLIENTID operation to inform NFS servers how to perform callbacks.  Our client advertises "rdma" as the callback netid when the forward channel is "rdma".  But our client always starts only a "tcp" and a "tcp6" client.

The simplest fix is to have our client always advertise "tcp" or "tcp6" as the callback netid, since that is what we have support for, and RDMA setups always have IPoIB as a pre-requisite.
Comment 1 Chuck Lever 2014-01-21 20:17:29 UTC
Correction: "But our client always starts only a "tcp" and a "tcp6" callback server."
Comment 2 Chuck Lever 2014-01-22 18:17:42 UTC
Created attachment 123041 [details]
Proposed fix for bz 69171
Comment 3 Chuck Lever 2014-04-11 14:29:42 UTC
Commit 706cb8db3b629f6021499a5edfdde526a3cf7d95 was merged into 3.15

Note You need to log in before you can comment on or make changes to this bug.